# BOplot

./: .gitignore  README.md  SU2_BO优化效果分析与问题定义说明.md  bo优化设计方案.md  pyproject.toml  run_plat_bo.py  平台搭建进度.md  链接fluent.md
.pytest_cache/v/cache/: nodeids
FL/: _fluent_try_input.json  common.py  export_cad.py  fluent_meshing.py  fluent_smoke.py  mesh.py  parametric_model.py  run_cad_fluent_pipeline.py  run_fluent.py  run_pipeline.py  spaceclaim_mesh.py
Mlu/: dtlz2_program.py  run_moo_demo.py
SU2/: _su2_try_input.json  common.py  extract_result.py  mesh.py  parametric_model.py  prepare_visualization.py  run_cad_su2_pipeline.py  run_su2.py  setup_case.py
files/: Fluent集成方案.md  五个模块.md  平台搭建进度.md  项目计划书_BO平台.md
src/plat_bo/: __init__.py  __main__.py  bootstrap.py  config.py  engine.py  evaluator.py  heartbeat.py  models.py  run_branin_demo.py  supervisor.py  ui_app.py  validator.py  visualize_3d.py  worker.py
src/plat_bo/acquisition/: botorch_acq.py  package.json  strategy_config.py  turbo_skeleton.py
src/plat_bo/initialization/: bootstrap.py  config.py  file_io.py  models.py  package.json  task_config_store.py  validator.py
src/plat_bo/objective/: branin_program.py  evaluator.py  package.json  su2_airfoil_program.py  visualize_3d.py
src/plat_bo/optimizer/: heartbeat.py  package.json  run_branin_demo.py  supervisor.py  ui_app.py  worker.py
src/plat_bo/problems/: __init__.py
src/plat_bo/surrogate/: engine.py  package.json
tests/: test_component_config.py  test_initialization.py  test_objective.py  test_surrogate.py  test_ui_metrics.py
