[project]
name = "plat-bo"
version = "0.1.0"
description = "File-driven Bayesian optimization platform skeleton"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "torch>=1.13",
  "gpytorch>=1.8",
  "botorch>=0.6.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
